# TreeMendous

./: .clangd  .cursorignore  .envrc  .gitignore  AGENTS.md  Justfile  MANIFEST.in  README.md  REPOSITORY_STRUCTURE_CHANGE.md  build.py  demo_summary_trees.py  pyproject.toml  setup.py  setup_gpu.py  setup_metal.py
.github/workflows/: benchmarks-adhoc.yml  benchmarks.yml  ci-cd.yaml  exact-batch-evidence.yml  prevent-examples-docs.yml  release.yml
basic/: avl.py  avl_earliest.py  base.py
docs/: .gitrepo  ARCHITECTURE_GUIDE.md  CPP_PROFILING_GUIDE.md  INTERVAL_TREE_VISUALIZATION.md  MATHEMATICAL_ANALYSIS.md  OPTIMIZATION_CP_SAT.md  PERFORMANCE_PROFILING.md  QUEUING_THEORY_OPTIMIZATION.md  QUICK_REFERENCE.md  RANDOMIZED_ALGORITHMS.md  README.md  REALTIME_SYSTEMS_THEORY.md  TEMPORAL_ALGEBRAS_SCHEDULING.md  api.md  application-patterns.md  applications.md  backends.md  benchmarking.md  building.md  choosing-an-interface.md  contributing.md  exact-batch.md  experimental-exact-batch.md  getting-started.md  interactive_visualization.ipynb  performance.md  releasing.md  use-cases.md
docs/releases/: 1.1.0.md  1.1.1.md  1.2.0.md
docs/theory/: box_index_denotation.md  multidimensional_acceleration.md  one_dimensional_interval_algorithms.md  one_dimensional_interval_formal_model.md  optimized_box_indexes.md
examples/: .gitrepo  README.md  backend_comparison_demo.py  backend_switching_demo.py  basic_rangeset.py  bellman_optimization.ipynb  exact_batch.py  genetic_algorithm.ipynb  interactive_visualization.ipynb  jackson_networks_bellman.ipynb  job_shop_cpsat.ipynb  manufacturing_bellman.ipynb  queueing_optimization.ipynb  scheduling_visualization.ipynb  small_world_networks.ipynb
examples/bellman_iteration/: queue_network_optimization.py
examples/common/: backend_config.py
examples/cp_sat_applications/: job_shop_scheduling.py
examples/deadline_scheduling/: realtime_scheduler.py
examples/patterns/: atomic_memory_map_updates.py  atomic_partition_availability_updates.py  atomic_port_pool_reconciliation.py  genomic_mask_batch_updates.py  robot_volume_time_conflicts.py  spatiotemporal_geofences.py  video_region_timeline_overlap.py  warehouse_space_time_reservations.py
examples/practical_applications/: cloud_resource_manager.py  manufacturing_scheduler.py
examples/randomized_algorithms/: treap_implementation.py
examples/visualizations/: __init__.py  algorithm_analysis.py  tree_structure_demo.py
rust/interval_manager/: Cargo.toml
scripts/: create-release.sh  create-tag.sh  generate-release-notes.sh  generate_scenario_catalog.py  reproduce_exact_batch_storage_rejection.sh  sync-repos.sh  verify_artifact_contents.py  verify_benchmark_artifact.py  verify_exact_batch_benchmark.py  verify_exact_batch_scaling.py  verify_mutation_attribution.py  verify_rangeset_hotpath_benchmark.py
tests/: test_boundary_summary_simple.py  test_summary_simple.py  test_treap_simple.py
tests/applications/: __init__.py  test_lazy_exports.py  test_registry.py  test_shared_clock.py
tests/docs/: inventory.py  test_documented_commands.py  test_readme.py
tests/formal/: __init__.py  finite_model.py  one_dimensional_model.py  test_box_index_finite_model.py  test_one_dimensional_algebra.py  test_one_dimensional_augmentations.py  test_one_dimensional_backend_refinement.py  test_one_dimensional_publication.py
tests/hardware/: test_hardware_contracts.py
tests/multidimensional/: __init__.py  test_contract.py  test_domain.py  test_failure_atomicity.py  test_optimized_concurrency.py  test_optimized_contract.py  test_optimized_differential.py  test_optimized_guards.py
tests/oracles/: __init__.py
tests/packaging/: test_artifact_policy.py  test_repository_layout.py  test_sdist_install.py  test_wheel_install.py
tests/performance/: accelerator_benchmark.py  application_benchmark_suite.py  application_workloads.py  batch_operations_benchmark.py  benchmark.py  benchmark_suite.py  bounded_box_index_benchmark.py  boundry_vs_avl.py  boundry_vs_avl_prof.py  comprehensive_benchmark.py  cpp_profiler.py  exact_batch_benchmark.py  exact_batch_scaling.py  flamegraph_profiler.py  gpu_benchmark.py  gpu_stress_test.py  harness.py  large_scale_benchmark.py  large_scale_gpu_benchmark.py  legacy.py  metal_benchmark.py  mutation_attribution.py  optimization_benchmark.py  oracle.py  payload_benchmark.py  profiles.py  protocol_benchmark.py  rangeset_hotpath_benchmark.py  simple_benchmark.py  simple_optimization_benchmark.py  test_bounded_box_index_benchmark.py  test_exact_batch_benchmark.py  test_partitioning_application_benchmarks.py  treap_benchmark.py  visual_profiler.py  workload.py
tests/security/: test_callback_reentrancy.py  test_snapshot_isolation.py
tests/unit/: test_application_benchmark_harness.py  test_application_benchmark_suite.py  test_backend_manager_facade.py  test_backend_normalization.py  test_backend_probe_contract.py  test_backend_registry.py  test_backend_selection.py  test_benchmark_artifacts.py  test_benchmark_harness.py  test_benchmark_suite.py  test_catalog_application_benchmarks.py  test_compatibility_values.py  test_core_contract.py  test_exact_batch.py  test_exact_batch_benchmark_artifact.py  test_exact_batch_contract.py  test_exact_batch_scaling_artifact.py  test_experimental_backend_wrappers.py  test_experimental_exact_batch.py  test_interval_data_payload.py  test_interval_payload_hooks.py  test_leasing_application_benchmarks.py  test_mutation_attribution.py  test_native_core_contract.py  test_optional_backend_wrappers.py  test_payload_policies.py  test_public_api.py  test_rangeset_hotpath_benchmark_artifact.py  test_rangeset_interface_edges.py  test_rangeset_scalar_hotpath.py  test_rangeset_snapshot_cache.py  test_segment_tree.py  test_stable_backends.py  test_unified_implementations.py
treemendous/: __init__.py  backend_manager.py  domain.py  exact_batch.py  policies.py  protocols.py  rangeset.py
treemendous/applications/: __init__.py  registry.py
treemendous/backends/: __init__.py  catalog.py  normalize.py  probe.py  registry.py  selection.py  types.py
treemendous/basic/: avl.py  (+9 more)
(+457 files in other folders)
