[tool.poetry]
name = "treemendous"
version = "0.1.0"
description = "Exploring a diverse collection of interval tree implementations across multiple programming languages to identify the most efficient configurations for varied use cases, such as optimizing for query speed, memory usage, or dynamic updates."
authors = ["Joseph Cox <joseph@codensity.io>"]
license = "BSD 3-Clause License"
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.12"
sortedcollections = "^2.1.0"
sortedcontainers = "^2.4.0"
pybind11 = "^2.13.6"

[tool.poetry.group.dev.dependencies]
sortedcontainers-stubs = "^2.4.2"
flameprof = "^0.4"
maturin = "^1.7.4"


[tool.poetry.group.test.dependencies]
hypothesis = "^6.119.4"
pytest = "^8.3.3"

[tool.pytest.ini_options]
addopts = "--hypothesis-explain -vv"


[build-system]
requires = [
    "poetry-core>=1.0.0",
    "pybind11>=2.13.6",
    "setuptools>=75.6.0",
    "maturin>=1.7.4"
]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/interval_manager/Cargo.toml"
module-name = "treemendous.rust.interval_manager"
features = ["pyo3/extension-module"]
bindings = "pyo3"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
