[project]
name = "treemendous"
version = "0.2.3"
description = "Exploring a diverse collection of interval tree implementations across multiple programming languages to identify the most efficient configurations for varied use cases, such as optimizing for query speed, memory usage, or dynamic updates."
authors = [{name = "Joseph Cox", email = "joseph@codensity.io"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pybind11",
    "setuptools",
    "sortedcollections>=2.1.0",
    "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "sortedcontainers-stubs>=2.4.2",
    "flameprof>=0.4",
]
test = [
    "hypothesis>=6.119.4",
    "pytest>=8.3.3",
]
profiling = [
    "flameprof>=0.4",
    "snakeviz>=2.2.0",
    "py-spy>=0.3.14",
    "memory-profiler>=0.61",
]
visualization = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "jupyter>=1.0.0",
    "networkx>=3.5.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
]
examples = [
    "ortools>=9.14.6206",
]

[tool.pytest.ini_options]
addopts = "--hypothesis-explain -vv"


[build-system]
requires = ["setuptools>=75.6.0", "pybind11>=2.13.6", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["treemendous*"]

[tool.setuptools.package-data]
"treemendous.cpp" = ["*.so", "*.pyd", "*.dll", "*.dylib"]

# Ensure compiled extensions are included
[tool.setuptools]
include-package-data = true
