[project]
name = "treemendous"
version = "1.1.0"
description = "Integer range sets with interchangeable Python and native CPU backends."
authors = [{ name = "Joseph Cox", email = "joseph@codensity.io" }]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["sortedcontainers>=2.4.0"]

[project.optional-dependencies]
build = ["build>=1.2.2", "pybind11>=3.0.0", "setuptools>=83.0.0"]
quality = [
  "mypy>=1.15.0",
  "pip-audit>=2.8.0",
  "ruff>=0.11.0",
  "sortedcontainers-stubs>=2.4.2",
]
test = [
  "coverage[toml]>=7.6.9",
  "hypothesis>=6.119.4",
  "pytest>=8.3.3",
  "pytest-cov>=6.0.0",
]
[tool.pytest.ini_options]
addopts = "--hypothesis-explain -vv --strict-markers --strict-config"
# Keep repository-only test helpers importable consistently when pytest is
# launched through an installed console script or coverage on CI.
pythonpath = ["."]
filterwarnings = ["error"]
markers = [
  "unit: fast implementation-independent tests",
  "property: property-based semantic tests",
  "native: stable native CPU extension tests",
  "icl: Boost ICL tests",
  "metal: Metal device and resource tests",
  "cuda: CUDA device tests",
  "slow: long-running correctness tests",
  "benchmark: non-PR performance tests",
  "packaging: built artifact and clean-install tests",
]


[build-system]
requires = ["setuptools>=83.0.0", "pybind11>=3.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["treemendous*"]

[tool.setuptools.package-data]
"treemendous" = ["py.typed"]
"treemendous.cpp" = ["*.pyi"]
"treemendous.cpp.metal" = ["resources/*.metallib"]

[tool.setuptools.exclude-package-data]
"treemendous.cpp" = ["*.cpp", "*.h"]
"treemendous.cpp.gpu" = ["*.cpp", "*.h", "*.cu"]
"treemendous.cpp.metal" = ["*.cpp", "*.h", "*.mm", "*.metal"]

[tool.setuptools]
include-package-data = true

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["dist", "performance_profiles"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# This executable native test imports the extension after making the in-place
# build directory importable.
"tests/unit/hypothesis/test_boundary_cpp_ic.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
files = ["treemendous"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
  "treemendous.domain",
  "treemendous.policies",
  "treemendous.protocols",
  "treemendous.rangeset",
  "treemendous.applications.*",
  "treemendous.backends.*",
  "treemendous.multidimensional.*",
]
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true

[tool.coverage.run]
branch = true
source = ["treemendous"]

[tool.coverage.report]
# Retain a platform margin while preventing regression below the measured
# 90% branch-coverage floor.
fail_under = 90
show_missing = true
skip_covered = true
exclude_also = ["if TYPE_CHECKING:", "if __name__ == .__main__.:"]
